snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.120746-1-all.jar.md5
560f0104c6e5895399d2bea93bd30769